# AASM

./: .gitignore  Dockerfile  FULL_GUIDE_AR.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aasm/: __init__.py
aasm/cli/: __init__.py  main.py  output.py
aasm/cli/commands/: __init__.py  agents.py  assess.py  audit.py  discover.py  fingerprint.py  graph.py  mcp.py  report.py  risk.py  scan.py
aasm/core/: __init__.py  config.py  logger.py  models.py
aasm/modules/: __init__.py
aasm/modules/agents/: __init__.py  analyzer.py
aasm/modules/assessment/: __init__.py  engine.py
aasm/modules/assessment/checks/: __init__.py  ai_security.py  auth.py  authorization.py  infrastructure.py  secrets.py
aasm/modules/confidence/: __init__.py  engine.py
aasm/modules/detection/: __init__.py  engine.py  signatures.py
aasm/modules/discovery/: __init__.py  engine.py
aasm/modules/enumeration/: __init__.py  engine.py
aasm/modules/fingerprint/: __init__.py  deep.py  engine.py
aasm/modules/mapper/: __init__.py  attack_surface.py
aasm/modules/mcp/: __init__.py  analyzer.py  scanner.py
aasm/modules/reporting/: __init__.py  engine.py
aasm/modules/risk/: engine.py
aasm/modules/version_intel/: __init__.py  advisories.py  engine.py
aasm/modules/visualization/: __init__.py  engine.py
aasm/plugins/: __init__.py  base.py
config/: default.yaml
demo-lab/: README.md  demo_commands.sh  lab_server.py
tests/: __init__.py  test_confidence_engine.py  test_config.py  test_deep_fingerprint.py  test_discovery.py  test_endpoint_enumeration.py  test_mcp_analyzer.py  test_models.py  test_new_platforms.py  test_risk_engine.py  test_security_checks.py  test_smart_detection.py  test_version_intel.py
