[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aasm"
version = "0.1.0"
description = "AI Attack Surface Mapper — Enterprise CLI for discovering and securing AI infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "AASM Project", email = "security@aasm.dev" }
]
keywords = ["cybersecurity", "ai-security", "llm", "mcp", "attack-surface", "cli", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyYAML>=6.0.1",
    "jinja2>=3.1.4",
    "asyncio-throttle>=1.0.2",
    "python-nmap>=0.7.1",
    "ipaddress",
    "aiofiles>=23.2.1",
    "networkx>=3.3",
    "matplotlib>=3.9.0",
    "graphviz>=0.20.3",
    "weasyprint>=62.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "click>=8.1.7",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "httpx",
]

[project.scripts]
aasm = "aasm.cli.main:app"

[project.urls]
Homepage = "https://github.com/aasm-project/aasm"
Documentation = "https://aasm.dev/docs"
Repository = "https://github.com/aasm-project/aasm"
"Bug Tracker" = "https://github.com/aasm-project/aasm/issues"

[tool.hatch.build.targets.wheel]
packages = ["aasm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
